@@ -1,4 +1,5 @@
-from tipfy.ext.xmpp import CommandHandler
+from tipfy.ext.xmpp import BaseHandler, CommandHandler
+
 
 class XmppHandler(CommandHandler):
     def foo_command(self, message):
@@ -6,3 +7,12 @@ class XmppHandler(CommandHandler):
 
     def bar_command(self, message):
         message.reply('Bar command!')
+
+    def text_message(self, message):
+        super(XmppHandler, self).text_message(message)
+        message.reply(message.body)
+
+
+
+class XmppHandler2(BaseHandler):
+    pass
